ADDED THIGS WAAA

--- a/sites/404.html
+++ b/sites/404.html
@@ -22,7 +22,7 @@
         </a>
         <ul class="nav nav-pills">
           <li class="nav-item"><a href="index.html" class="nav-link text-white">Home</a></li>
-          <li class="nav-item"><a href="placeholder.html" class="nav-link text-white">Browse</a></li>
+          <li class="nav-item"><a href="browse.html" class="nav-link text-white">Browse</a></li>
           <li class="nav-item"><a href="index.html#FAQ" class="nav-link text-white">FAQ</a></li>
           </ul>
         </ul>
