--- a/sites/index.html
+++ b/sites/index.html
@@ -22,7 +22,7 @@
         </a>
         <ul class="nav nav-pills">
           <li class="nav-item"><a href="#" class="nav-link bg-ternary text-white" aria-current="page">Home</a></li>
-          <li class="nav-item"><a href="placeholder.html" class="nav-link text-white">Browse</a></li>
+          <li class="nav-item"><a href="browse.html" class="nav-link text-white">Browse</a></li>
           <li class="nav-item"><a href="#FAQ" class="nav-link text-white">FAQ</a></li>
           </ul>
         </ul>
@@ -41,7 +41,7 @@
             La guia completa para aprender a programar en español. Esta guia te ayudara a comprender los conceptos basicos de la programacion ademas de enseñarte diferentes lenguages.
           </p>
           <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-            <a type="button" class="btn btn-ternary btn-lg px-4 me-md-2" href="./placeholder.html">Empieza Ahora</a>
+            <a type="button" class="btn btn-ternary btn-lg px-4 me-md-2" href="./browse.html">Empieza Ahora</a>
           </div>
         </div>
       </div>
