--- a/sites/browse.html
+++ b/sites/browse.html
@@ -8,8 +8,17 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="./css/bootstrapColors.css" rel="stylesheet">
-    <title>No encontrado - The Right Code</title>
+    <title>Navegar - The Right Code</title>
   </head>
+  <style>
+    .img-responsive {
+      height: 0;
+      padding-bottom: 62.5%;
+      background-position: center center;
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
+  </style>
   <body class="bg-primary text-white">
 
     <!-- HEADER -->
@@ -22,7 +31,7 @@
         </a>
         <ul class="nav nav-pills">
           <li class="nav-item"><a href="index.html" class="nav-link text-white">Home</a></li>
-          <li class="nav-item"><a href="#" class="nav-link text-white bg-ternary active">Browse</a></li>
+          <li class="nav-item"><a href="browse.html" class="nav-link text-white">Browse</a></li>
           <li class="nav-item"><a href="index.html#FAQ" class="nav-link text-white">FAQ</a></li>
           </ul>
         </ul>
@@ -30,41 +39,48 @@
     </div>
 
     <!-- MAIN CONTENT -->
-  <div>
 
-    <!-- SIDEBAR -->
-
-    <div class="flex-shrink-0 p-3 border-end bg-primary" style="width: 280px;">
-      <a href="/" class="d-flex align-items-center pb-3 mb-3 text-decoration-none border-bottom">
-        <span class="fs-5 text-white fw-semibold">Algoritmos</span>
-      </a>
-      <ul class="list-unstyled ps-0 text-white">
-        <li class="mb-1">
-          <button class="btn btn-toggle bg-ternary text-white align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#intro-collapse" aria-expanded="false">
-            Introduccion
-          </button>
-          <div class="collapse" id="intro-collapse">
-            <ul class="btn-toggle-nav text-white list-unstyled fw-normal pb-1 small">
-              <li class="ps-3 "><a href="#" class="link-light rounded lead text-decoration-none">• ¿Qué es esto?</a></li>
-              <li class="ps-3"><a href="#" class="link-light rounded lead text-decoration-none">• placeholder</a></li>
-              <li class="ps-3"><a href="#" class="link-light rounded lead text-decoration-none">• placeholder</a></li>
-            </ul>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-6">
+          <div class="thumbnail">
+            <div class="img-responsive" style="background-image: url('https://via.placeholder.com/800x500.png');"></div>
+            <div class="caption">
+              <h3>Algoritmos</h3>
+              <p class="text-right">Los algoritmos son procedimientos paso a paso para resolver problemas o realizar tareas, a menudo utilizados en informática y matemáticas.<br><br><button class="btn btn-ternary">Empieza Ahora</button></p>
+            </div>
           </div>
-        </li>
-        <li class="mb-1">
-          <button class="btn btn-toggle bg-ternary text-white align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#syntax-collapse" aria-expanded="false">
-            placeholder
-          </button>
-          <div class="collapse" id="syntax-collapse">
-            <ul class="btn-toggle-nav text-white list-unstyled fw-normal pb-1 small">
-              <li class="ps-3 "><a href="#" class="link-light rounded lead text-decoration-none">• placeholder</a></li>
-              <li class="ps-3"><a href="#" class="link-light rounded lead text-decoration-none">• placeholder</a></li>
-              <li class="ps-3"><a href="#" class="link-light rounded lead text-decoration-none">• placeholder</a></li>
-            </ul>
+        </div>
+        <div class="col-sm-6">
+          <div class="thumbnail">
+            <div class="img-responsive" style="background-image: url('https://via.placeholder.com/800x500.png');"></div>
+            <div class="caption">
+              <h3>HTML</h3>
+              <p class="text-right">HTML es un lenguaje utilizado para crear y estructurar contenidos en la web mediante etiquetas y atributos.<br><br><button class="btn btn-ternary">Empieza Ahora</button></p>
+            </div>
           </div>
-        </li>
-        <li class="border-top my-3"></li>
-      </ul>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-6">
+          <div class="thumbnail">
+            <div class="img-responsive" style="background-image: url('https://via.placeholder.com/800x500.png');"></div>
+            <div class="caption">
+              <h3>C++</h3>
+              <p class="text-right">C++ es un popular lenguaje de programación utilizado para desarrollar una amplia gama de aplicaciones, con características como la programación orientada a objetos y el alto rendimiento.<br><br> <button class="btn btn-ternary">Empieza Aqui</button></p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6">
+          <div class="thumbnail">
+            <div class="img-responsive" style="background-image: url('https://via.placeholder.com/800x500.png');"></div>
+            <div class="caption">
+              <h3>Python</h3>
+              <p class="text-right">Some description of Image 4 <button class="btn btn-primary">Button 4</button></p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
     <!-- FOOTER -->
@@ -77,7 +93,6 @@
         <p class="text-center text-muted">&copy; Atelier d'Historia 2022</p>
       </footer>
     </div>
-  
-  </div>
+
   </body>
 </html>
