--- a/index.html
+++ b/index.html
@@ -60,32 +60,32 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item">
-          <img src="https://picsum.photos/id/83/1920/512" width="100%" height="512px">
+          <div style="height: 600px;"><img src="./pics/20161223111243_html5.jpg" width="100%" style="transform: translateY(-15%);"></div>
           <div class="container">
             <div class="carousel-caption text-start">
-              <h1>Example headline.</h1>
-              <p>Some representative placeholder content for the first slide of the carousel.</p>
-              <p><a class="btn btn-lg btn-ternary" href="#">Sign up today</a></p>
+              <h1>HTML</h1>
+              <p>El lenguaje de Marcas dominante de la Web</p>
+              <p><a class="btn btn-lg btn-ternary" href="#">Empieza Ahora</a></p>
             </div>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="https://picsum.photos/id/70/1920/512" width="100%" height="512px">
+          <div style="height: 600px;"><img src="./pics/javascript.jpg" width="100%" style="transform: translateY(-15%);"></div>
           <div class="container">
             <div class="carousel-caption">
-              <h1>Another example headline.</h1>
-              <p>Some representative placeholder content for the second slide of the carousel.</p>
-              <p><a class="btn btn-lg btn-ternary" href="#">Learn more</a></p>
+              <h1>JavaScript</h1>
+              <p>El lenguaje de scripts de la web.</p>
+              <p><a class="btn btn-lg btn-ternary" href="#">Empieza Ahora</a></p>
             </div>
           </div>
         </div>
         <div class="carousel-item active">
-          <img src="https://picsum.photos/id/66/1920/512" width="100%" height="512px">
+          <div style="height: 600px;"><img src="./pics/creative-css3-tutorials.webp" width="100%" style="transform: translateY(-15%);"></div>
           <div class="container">
             <div class="carousel-caption text-end">
-              <h1>One more for good measure.</h1>
-              <p>Some representative placeholder content for the third slide of this carousel.</p>
-              <p><a class="btn btn-lg btn-ternary" href="#">Browse gallery</a></p>
+              <h1>CSS</h1>
+              <p>El lenguaje de estilos para realizar páginas llamativas!</p>
+              <p><a class="btn btn-lg btn-ternary" href="#">Empieza Ya</a></p>
             </div>
           </div>
         </div>
