--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
 
     <div class="m-5 text-black">
       <h3 class="tw-bold">1. ¿Es esto completamente gratuito?</h3>
-      <p class="lead">Si, y va a ser gratis para siempre!</p>
-      <h3 class="tw-bold">placeholder</h3>
+      <p class="lead">Sí!, este servicio es completamente gratuito, y queremos subrayar que nuestro compromiso de ofrecerlo sin coste alguno se mantendrá firme en el futuro inmediato y más allá. Comprendemos la importancia de la accesibilidad y el valor de permitir que personas de toda condición utilicen este servicio sin limitaciones económicas.<br><br>Nuestra dedicación a mantener una plataforma gratuita nace de nuestra creencia en la igualdad de oportunidades y en que el conocimiento y la asistencia deben estar al alcance de todos, independientemente de sus circunstancias económicas. Nos esforzamos por crear un entorno inclusivo en el que las personas puedan beneficiarse de las funciones y recursos que ofrece este servicio, sin barreras ni restricciones.<br><br>Al ofrecer este servicio de forma gratuita, esperamos empoderar a las personas, fomentar el compromiso y promover un sentimiento de comunidad. Queremos asegurarnos de que todos los usuarios puedan sacar el máximo partido de este servicio, sin tener que preocuparse por los costes que conlleva. Tenga la seguridad de que nuestro compromiso de mantener este servicio gratuito es inquebrantable, ya que creemos firmemente en el impacto positivo que puede tener en la vida de las personas.<br><br>Por lo tanto, sí, este servicio es gratuito, y seguirá siéndolo, ya que seguimos dedicados a proporcionar este valioso recurso sin coste alguno. Le invitamos a aprovechar al máximo todas las funciones y ventajas que ofrece este servicio, sabiendo que siempre podrá acceder a él sin coste alguno.</p>
+      <h3 class="tw-bold">¿Qué lenguajes ofrecemos?</h3>
       <p class="lead">placeholder</p>
       <h3 class="tw-bold">placeholder</h3>
       <p class="lead">placeholder</p>
