--- a/about.html
+++ b/about.html
@@ -23,20 +23,44 @@
         <span class="fs-4">The Right Code</span>
         </a>
         <ul class="nav nav-pills">
-          <li class="nav-item"><a href="./index.html" class="nav-link text-black" aria-current="page">Inicio</a></li>
+          <li class="nav-item"><a href="./index.html" class="nav-link text-black">Inicio</a></li>
           <li class="nav-item"><a href="browse.html" class="nav-link text-black">Navegar</a></li>
           <li class="nav-item"><a href="./index.html#FAQ" class="nav-link text-black">FAQ</a></li>
-          <li class="nav-item"><a href="./about.html" class="nav-link text-black">Nosotros</a></li>
+          <li class="nav-item"><a href="./about.html" class="nav-link bg-ternary text-black" aria-current="page">Nosotros</a></li>
           </ul>
         </ul>
       </header>
     </div>
 
     <!-- MAIN CONTENT -->
-    <div class="align-items-center text-center m-5">
-      <h1 class="text-black tw-bold">Pagina no encontrada!</h1>
-      <img src="https://media.tenor.com/ZUndf9-2HVoAAAAd/nijika-ijichi-bocchi-the-rock.gif" style="max-height: 256px;"><br>
-      <small class="text-muted py-3">si este es un bug por favor reportalo a:<br><a href="mailto:joselopezdavid73@gmail.com">joselopezdavid73@gmail.com</a></small>
+    <div class="py-5" id="aboutUs">
+      <h2 class="text-muted text text-black text-center py-2 mx-5 border-bottom">Nosotros</h2>
+      <p class="lead text-black py-2" style="margin-inline: 20%; text-align: justify;">
+        Somos un equipo apasionado de tres personas dedicadas que trabajan en "The Right Code", un sitio web de codificación gratuito diseñado para capacitar a estudiantes de todos los niveles. Con la visión compartida de hacer que la formación en programación sea accesible para todos, nos esforzamos por crear una plataforma que fomente el crecimiento, la colaboración y la innovación en la comunidad de programadores.
+Nuestro equipo está formado por expertos en programación, educación y diseño de experiencias de usuario. Creemos que aprender a programar debe ser una experiencia divertida e interactiva, por lo que nos comprometemos a desarrollar recursos fáciles de usar y materiales de aprendizaje atractivos. Nuestro objetivo es desmitificar los conceptos de codificación y proporcionar a los alumnos las herramientas y la orientación adecuadas para sobresalir en su viaje de codificación.
+<br>En "The Right Code" somos conscientes de que la programación puede intimidar a los principiantes. Por lo tanto, hemos elaborado cuidadosamente un plan de estudios completo que empieza por lo básico y avanza gradualmente hacia temas más avanzados. Nuestros tutoriales paso a paso, los ejercicios prácticos y los proyectos del mundo real garantizan que los alumnos adquieran habilidades prácticas al tiempo que adquieren confianza en sus capacidades de codificación.
+También valoramos la importancia de la comunidad en el proceso de aprendizaje. Nuestra plataforma ofrece un espacio para que los alumnos se conecten, compartan ideas y colaboren con otros entusiastas de la programación. Ya sea a través de nuestros foros de debate, desafíos de codificación o programas de tutoría, nuestro objetivo es fomentar un entorno de apoyo en el que los alumnos puedan crecer juntos y aprender de las experiencias de los demás.
+<br>"The Right Code" es un proyecto que nos apasiona, impulsado por nuestra creencia en el poder transformador de la enseñanza de la programación. Estamos comprometidos a mejorar continuamente la plataforma, añadiendo nuevas características y ampliando nuestro plan de estudios para mantenernos al día con el panorama de la codificación en constante evolución. Nuestro objetivo es dotar a los alumnos de las habilidades que necesitan para navegar por el mundo digital con confianza y contribuir al apasionante campo de la tecnología.
+<br>Acompáñanos en este viaje mientras capacitamos a los aspirantes a programadores para que desarrollen su potencial, escriban "el código correcto" y den forma al futuro de nuestro mundo digital.
+      </p>
+      <h2 class="text-muted text text-black text-center py-2 mx-5 border-bottom">Miembros de The Right Code</h2>
+      <div class="row">
+        <div class="memberCard text-black col-4 align-items-center" style="transform: translate(0%); text-align: center;">
+          <img src="https://placehold.co/200x300" style="max-height: 250px;">
+          <h4>David Lucas<br><a class="text-muted" style="text-decoration: none;">(historia01)</a></h4>
+          <h6 class="text-muted">Desarrollador y Creador de la Página</h6>
+        </div>
+        <div class="memberCard text-black col-4 align-items-center" style="transform: translate(0%); text-align: center;">
+          <img src="https://placehold.co/200x300" style="max-height: 250px;">
+          <h4>Pambabay Erick</h4>
+          <h6 class="text-muted">Redactador</h6>
+        </div>
+        <div class="memberCard text-black col-4 align-items-center" style="transform: translate(0%); text-align: center;">
+          <img src="https://placehold.co/200x300" style="max-height: 250px;">
+          <h4>Nexon Ayoví</h4>
+          <h6 class="text-muted">Redactador</h6>
+        </div>
+      </div>
     </div>
     <!-- FOOTER -->
 
