--- a/javascript/about.html
+++ b/javascript/about.html
@@ -7,9 +7,9 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="./css/bootstrapColors.css" rel="stylesheet">
-    <link href="./css/carousel.css" rel="style">
-    <link href="./css/websiteStyles.css" rel="stylesheet">
+    <link href="../css/bootstrapColors.css" rel="stylesheet">
+    <link href="../css/carousel.css" rel="style">
+    <link href="../css/websiteStyles.css" rel="stylesheet">
     <title>No Encontrado - The Right Code</title>
   </head>
   <body class="bg-primary text-black">
@@ -23,31 +23,77 @@
         <span class="fs-4">The Right Code</span>
         </a>
         <ul class="nav nav-pills">
-          <li class="nav-item"><a href="./index.html" class="nav-link text-black" aria-current="page">Inicio</a></li>
+          <li class="nav-item"><a href="./index.html" class="nav-link text-black">Inicio</a></li>
           <li class="nav-item"><a href="browse.html" class="nav-link text-black">Navegar</a></li>
           <li class="nav-item"><a href="./index.html#FAQ" class="nav-link text-black">FAQ</a></li>
-          <li class="nav-item"><a href="./about.html" class="nav-link text-black">Nosotros</a></li>
+          <li class="nav-item"><a href="./about.html" class="nav-link bg-secondary text-black" aria-current="page">Nosotros</a></li>
           </ul>
         </ul>
       </header>
     </div>
 
-    <!-- MAIN CONTENT -->
-    <div class="align-items-center text-center m-5">
-      <h1 class="text-black tw-bold">Pagina no encontrada!</h1>
-      <img src="https://media.tenor.com/ZUndf9-2HVoAAAAd/nijika-ijichi-bocchi-the-rock.gif" style="max-height: 256px;"><br>
-      <small class="text-muted py-3">si este es un bug por favor reportalo a:<br><a href="mailto:joselopezdavid73@gmail.com">joselopezdavid73@gmail.com</a></small>
+  <!-- MAIN CONTENT -->
+  <div style="color: #000;" class="row">
+
+    <!-- SIDEBAR -->
+
+    <div class="col-3 flex-shrink-0 p-3 border-end bg-primary" style="width: 280px;">
+      <a href="/" class="d-flex align-items-center pb-3 mb-3 text-decoration-none border-bottom">
+        <span class="fs-5 text-black fw-semibold">JavaScript</span>
+      </a>
+      <ul class="list-unstyled ps-0 text-black">
+        <li class="mb-1">
+          <button style="color:#000 !important" class="btn btn-toggle bg-secondary  align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#intro-collapse" aria-expanded="false">
+            Introduccion
+          </button>
+          <div class="collapse" id="intro-collapse">
+            <ul class="btn-toggle-nav text-black list-unstyled fw-normal pb-1 small">
+              <li class="ps-3 "><a href="#" class=" rounded lead text-decoration-none">• ¿Qué es esto?</a></li>
+              <li class="ps-3"><a href="#" class=" rounded lead text-decoration-none">• placeholder</a></li>
+              <li class="ps-3"><a href="#" class=" rounded lead text-decoration-none">• placeholder</a></li>
+            </ul>
+          </div>
+        </li>
+        <li class="mb-1">
+          <button style="color:#000 !important" class="btn btn-toggle bg-secondary  align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#syntax-collapse" aria-expanded="false">
+            placeholder
+          </button>
+          <div class="collapse" id="syntax-collapse">
+            <ul class="btn-toggle-nav text-black list-unstyled fw-normal pb-1 small">
+              <li class="ps-3 "><a href="#" class=" rounded lead text-decoration-none">• placeholder</a></li>
+              <li class="ps-3"><a href="#" class=" rounded lead text-decoration-none">• placeholder</a></li>
+              <li class="ps-3"><a href="#" class=" rounded lead text-decoration-none">• placeholder</a></li>
+            </ul>
+          </div>
+        </li>
+        <li class="border-top my-3"></li>
+      </ul>
+    </div>
+    <div class="col-9" style="display: flex; align-items: center;">
+      <div>
+        <h1 class="text text-black text-center py-2 mx-5">Introduccion a JavaScript</h1>
+        <h2 class="text-muted text text-black text-center py-2 mx-5 border-bottom">¿Qué es JavaScript?</h2>
+        <p class="lead py-2 px-4">JavaScript es un lenguaje de programación muy utilizado para crear elementos interactivos en sitios web. Permite la funcionalidad dinámica, la manipulación de datos, el manejo de eventos y mucho más. JavaScript es flexible, admite programación orientada a objetos y es esencial para el desarrollo web moderno.</p>
+        <h2 class="px-5">JavaScript puede cambiar contenido HTML</h2>
+        <p class="lead py-2 px-4">Uno de los muchos métodos HTML de JavaScript es <i>getElementById()</i>.
+        <br>El ejemplo siguiente "encuentra" un elemento HTML <i>(con id="demo")</i>, y cambia el contenido del elemento <i>(innerHTML)</i> a <b>"Hola JavaScript"</b>:</p>
+        <div class="codeSnippet"><h3 class="codeSnippetTitle">Ejemplo:</h3><p class="codeSnippetText">document.getElementById("demo").innerHTML = "Hola JavaScript";</p></div>
+        <h2 class="px-5">JavaScript puede cambiar los valores de los atributos HTML</h2>
+        <p class="lead py-2 px-5">En este ejemplo, JavaScript cambia el valor del atributo <i>src</i> (fuente) de una etiqueta <i>&lt;img&gt;</i>:</p>
+        <div class="codeSnippet"><h3 class="codeSnippetTitle">Ejemplo:</h3><p class="codeSnippetText"><iframe src="./examples/lightbulb.html" width="100%" height="220px"></iframe></p></div>
+      </div>
     </div>
     <!-- FOOTER -->
 
     <div class="container-fluid">
       <footer>
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-          <li class="nav-item"><a href="./index.html" class="nav-link px-2 text-muted">Regresar al Inicio</a></li>
+          <li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">Return Home</a></li>
         </ul>
         <p class="text-center text-muted">&copy; Atelier d'Historia 2022</p>
       </footer>
     </div>
+  </div>
 
   </body>
 </html>
