--- a/sites.old/index.html
+++ b/sites.old/index.html
@@ -8,7 +8,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="./css/bootstrapColors.css" rel="stylesheet">
-    <link href="./css/websiteStyles.css" rel="stylesheet">
     <link href="./css/carousel.css" rel="style">
     <title>Home - The Right Code</title>
   </head>
@@ -23,10 +22,9 @@
         <span class="fs-4">The Right Code</span>
         </a>
         <ul class="nav nav-pills">
-          <li class="nav-item"><a href="#" class="nav-link bg-ternary text-black" aria-current="page">Inicio</a></li>
-          <li class="nav-item"><a href="browse.html" class="nav-link text-black">Navegar</a></li>
+          <li class="nav-item"><a href="#" class="nav-link bg-ternary text-black" aria-current="page">Home</a></li>
+          <li class="nav-item"><a href="browse.html" class="nav-link text-black">Browse</a></li>
           <li class="nav-item"><a href="#FAQ" class="nav-link text-black">FAQ</a></li>
-          <li class="nav-item"><a href="./about.html" class="nav-link text-black">Nosotros</a></li>
           </ul>
         </ul>
       </header>
