--- a/browse.html
+++ b/browse.html
@@ -41,7 +41,7 @@
               <img src="./pics/javascript.jpg" class="cardImage">
               <div class="caption">
                 <h3 class="cardText">JavaScript</h3>
-                <p class="text-right cardText">JavaScript es un lenguaje de programación web interactivo para sitios web dinámicos, que permite la funcionalidad, la manipulación de datos y el manejo de eventos. Esencial para el desarrollo web moderno.<br><br><button class="btn btn-ternary">Empieza Ahora</button></p>
+                <p class="text-right cardText">JavaScript es un lenguaje de programación web interactivo para sitios web dinámicos, que permite la funcionalidad, la manipulación de datos y el manejo de eventos. Esencial para el desarrollo web moderno.<br><br><button class="btn btn-ternary" onclick="window.location.href='./javascript/jsIntro.html'">Empieza Ahora</button></p>
               </div>
             </div>
           </div>
