--- a/javascript/jsIntro.html
+++ b/javascript/jsIntro.html
@@ -77,10 +77,17 @@
         <h2 class="px-5">JavaScript puede cambiar contenido HTML</h2>
         <p class="lead py-2 px-4">Uno de los muchos métodos HTML de JavaScript es <i>getElementById()</i>.
         <br>El ejemplo siguiente "encuentra" un elemento HTML <i>(con id="demo")</i>, y cambia el contenido del elemento <i>(innerHTML)</i> a <b>"Hola JavaScript"</b>:</p>
-        <div class="codeSnippet"><h3 class="codeSnippetTitle">Ejemplo:</h3><p class="codeSnippetText">document.getElementById("demo").innerHTML = "Hola JavaScript";</p></div>
+        <div class="codeSnippet"><h3 class="codeSnippetTitle">Ejemplo:</h3><iframe class="codeSnippetText" src="./examples/helloword.html"></iframe></div>
         <h2 class="px-5">JavaScript puede cambiar los valores de los atributos HTML</h2>
         <p class="lead py-2 px-5">En este ejemplo, JavaScript cambia el valor del atributo <i>src</i> (fuente) de una etiqueta <i>&lt;img&gt;</i>:</p>
-        <div class="codeSnippet"><h3 class="codeSnippetTitle">Ejemplo:</h3><p class="codeSnippetText"><iframe src="./examples/lightbulb.html" width="100%" height="220px"></iframe></p></div>
+        <div class="codeSnippet"><h3 class="codeSnippetTitle">Ejemplo:</h3><iframe class="codeSnippetText" src="./examples/lightbulb.html" height="256px"></iframe></div>
+        <h2 class="px-5">JavaScript puede estilos CSS</h2>
+        <p class="lead py-2 px-5">En el siguiente ejemplo los botones cambian el valor CSS <i>background-color</i> del elemento <i>box</i>:</p>
+        <div class="codeSnippet"><h3 class="codeSnippetTitle">Ejemplo</h3><iframe class="codeSnippetText" src="./examples/color.html"></iframe></div>
+        <div class="row">
+          <div class="navButton"><a>Anterior</a></div>
+          <div class="navButton"><a>Siguiente</a></div>
+        </div>
       </div>
     </div>
     <!-- FOOTER -->
