--- a/browse.html
+++ b/browse.html
@@ -36,32 +36,31 @@
     <div>
       <div class="container text-black">
         <div class="row">
-          <div class="col-sm-6">
-            <div class="thumbnail">
-              <img src="./pics/javascript.jpg" class="cardImage">
-              <div class="caption">
-                <h3 class="cardText">JavaScript</h3>
-                <p class="text-right cardText">JavaScript es un lenguaje de programación web interactivo para sitios web dinámicos, que permite la funcionalidad, la manipulación de datos y el manejo de eventos. Esencial para el desarrollo web moderno.<br><br><button class="btn btn-ternary" onclick="window.location.href='./javascript/jsIntro.html'">Empieza Ahora</button></p>
-              </div>
-            </div>
-          </div>
+          
           <div class="col-sm-6">
             <div class="thumbnail">
               <img src="./pics/html.png" class="cardImage">
               <div class="caption">
                 <h3 class="cardText">HTML</h3>
-                <p class="text-right cardText">HTML es un lenguaje utilizado para crear y estructurar contenidos en la web mediante etiquetas y atributos.<br><br><button class="btn btn-ternary">Empieza Ahora</button></p>
+                <p class="text-right cardText">HTML es un lenguaje utilizado para crear y estructurar contenidos en la web mediante etiquetas y atributos.<br><br><button class="btn btn-ternary" onclick="window.location.href='./html/htmlIntro.html'">Empieza Ahora</button></p>
               </div>
             </div>
           </div>
-        </div>
-        <div class="row">
           <div class="col-sm-6">
             <div class="thumbnail">
               <img src="./pics/creative-css3-tutorials.webp" class="cardImage">
               <div class="caption">
                 <h3 class="cardText">CSS</h3>
-                <p class="text-right cardText">Lenguaje de programación web para dar estilo a las páginas web, definir el diseño, los colores, las fuentes y las animaciones. Funciona junto con HTML para mejorar el aspecto visual.<br><br> <button class="btn btn-ternary">Empieza Aqui</button></p>
+                <p class="text-right cardText">Lenguaje de programación web para dar estilo a las páginas web, definir el diseño, los colores, las fuentes y las animaciones. Funciona junto con HTML para mejorar el aspecto visual.<br><br><button class="btn btn-ternary" onclick="window.location.href='./cssguide/cssintro.html'">Empieza Aqui</button><a class="text-muted" style="text-decoration: none; padding-inline-start: 20px;">Recomendado HTML</a></p>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6">
+            <div class="thumbnail">
+              <img src="./pics/javascript.jpg" class="cardImage">
+              <div class="caption">
+                <h3 class="cardText">JavaScript</h3>
+                <p class="text-right cardText">JavaScript es un lenguaje de programación web interactivo para sitios web dinámicos, que permite la funcionalidad, la manipulación de datos y el manejo de eventos. Esencial para el desarrollo web moderno.<br><br><button class="btn btn-ternary" onclick="window.location.href='./javascript/jsIntro.html'">Empieza Ahora</button><a class="text-muted" style="text-decoration: none; padding-inline-start: 20px;">Recomendado HTML & CSS</a></p>
               </div>
             </div>
           </div>
